@@ -8,9 +8,9 @@
     <!-- ng-hide="documentSelection" -->
     <div ui-layout="{flow : 'column'}">
       <div ui-layout-container>
-	<div ui-layout="{dividerSize:'0', disableToggle:true}">
-		<div ui-layout-container size="0px" min-size="0px" max-size="46px" collapsed="!layout.showEditorTabs">
-	    <div class="main-content-header flow-effect-top" id="annotation-main-content-header">
+        <div ui-layout="{dividerSize:'0', disableToggle:true}">
+          <div ui-layout-container size="46px" min-size="0px" max-size="46px" collapsed="!layout.showEditorTabs">
+            <div class="main-content-header flow-effect-top" id="annotation-main-content-header">
               <div class="btn-group">
                 <label class="btn btn-default active" ng-model="maincontentSelector" btn-radio="'document'">Document</label>
                 <label class="btn btn-default" ng-model="maincontentSelector" btn-radio="'attributes'">Document Attributes</label>
@@ -20,20 +20,27 @@
           <div ui-layout-container="central">
             <div class="main-content">
               <div class='spinner-border' role='status'><span class='sr-only'>Loading...</span></div>
-	      <div class="main-content-document"   ng-show="maincontentSelector=='document'"><text-widget></text-widget></div>
-	      <div class="main-content-attributes" ng-show="maincontentSelector=='attributes'"></div>
-	      <div ng-show='spinnerVisible'><span class='fa fa-spinner'>Loading...</div>
+              <div class="main-content-document"   ng-show="maincontentSelector=='document'"><text-widget></text-widget></div>
+              <table id="main-content-annotate-document-attributes" class="main-content-attributes" ng-show="maincontentSelector=='attributes'">
+                <tbody>
+                  <tr class="main-content-attributes-header">
+                    <td></td>
+                  </tr>
+                  <tr class="main-content-attributes-row"><td class="main-content-attributes-cell" /></tr>
+                </tbody>
+              </table>
+              <div ng-show='spinnerVisible'><span class='fa fa-spinner'>Loading...</div>
             </div>
-	  </div>
+          </div>
           <div ui-layout-container size="48px" min-size="48px" max-size="48px">
             <overlapping-areas></overlapping-areas>
-	  </div>
-	</div>
-	<!--
+          </div>
+        </div>
+        <!--
         <div class="main-content" autoslimscroll scroll-subtraction-height="144">
           <text-widget></text-widget>
         </div>
-	<overlapping-areas></overlapping-areas> -->
+        <overlapping-areas></overlapping-areas> -->
       </div>
       <!-- Petasis, 19/03/2021: allow bar to move to a wider range<div ui-layout-container size="400px" min-size="280px" max-size="520px"> -->
       <div ui-layout-container size="25%" min-size="15%" max-size="75%">
